# genesis

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  README  README.md  ROM.cpp  ROM.h  ROM_debug.hpp  main.cpp  rom.cpp  rom.h  rom_debug.hpp  string_utils.hpp
.github/workflows/: codeql-analysis.yml  docker-image.yml  linux.yml  macos.yml  msan.yml  qemu-i686.yml  windows.yml
docker/: CMakeLists.txt  DockerComposeAlpineClangDev.yaml  DockerfileAlpineClang  DockerfileAlpineGCC
docker_build/: DockerfileAlpineClang  DockerfileLinux  alpine_gcc.bat
extra/: CMakeLists.txt
genesis/: CMakeLists.txt  cpu_flags.hpp  endian.hpp  endianness.hpp  exception.hpp  main.cpp  memory.hpp  rom.cpp  rom.h  rom_debug.hpp  static_queue.hpp  string_utils.hpp  time_utils.h
genesis/io_ports/: controller.h  disabled_port.h  input_device.h  key_type.h
genesis/m68k/: bus_access.h  bus_manager.cpp  bus_manager.h  cpu.cpp  cpu.h  cpu_bus.hpp  cpu_memory.h  cpu_registers.hpp  interrupting_device.h
genesis/m68k/impl/: base_handler.cpp  base_handler.h  base_unit.cpp  base_unit.h  bus_manager.cpp  bus_manager.h  bus_manager.hpp  bus_scheduler.cpp  bus_scheduler.h  ea_decoder.hpp  ea_modes.h  exception_manager.h  exception_unit.hpp  executioner.hpp  instruction_ea_modes.hpp  instruction_handler.hpp  instruction_type.h  instruction_unit.hpp  interrupt_riser.h  opcode_decoder.cpp  opcode_decoder.h  operations.hpp  pc_corrector.hpp  prefetch_queue.hpp  privilege_checker.hpp  size_type.h  timings.hpp  trace_riser.hpp
genesis/memory/: addressable.h  base_unit.h  dummy_memory.h  logging_memory.h  memory_builder.cpp  memory_builder.h  memory_unit.h  read_only_memory_unit.h
genesis/sdl/: base_display.h  displayable.h  input_device.h  palette_display.h  plane_display.cpp  plane_display.h
genesis/smd/: genesis.cpp  genesis.h  smd.cpp  smd.h
genesis/smd/impl/: m68k_bus_access.h  m68k_interrupt_access.h  z80_68bank.h  z80_control_registers.h  z80_io_ports.h
genesis/vdp/: address_register.h  control_register.h  m68k_bus_access.h  m68k_interrupt_access.h  memory.h  mode.h  output_color.h  ports.cpp  ports.h  read_buffer.h  register_set.h  registers.h  settings.h  vdp.cpp  vdp.h
genesis/vdp/impl/: blank_flags.h  color.h  dma.h  fifio.h  fifo.h  hscroll_table.h  hsync_table.h  hv_counters.h  hv_unit.h  interrupt_unit.h  memory_access.h  name_table.h  plane_type.h  render.cpp  render.h  sprite_table.h  sprites_limits_tracker.h  vscroll_table.h
genesis/z80/: cpu.cpp  cpu.h  cpu_bus.hpp  cpu_registers.hpp  io_ports.hpp  memory.h  register_set.hpp
genesis/z80/impl/: arithmetic_logic_unit.hpp  base_unit.hpp  cpu_unit.hpp  decoder.hpp  dispatching_tables.hpp  executioner.hpp  inst_finder.hpp  instructions.hpp  operations.hpp
src/: string_utils.hpp
tests/: CMakeLists.txt  endian.cpp  endianness.cpp  helper.hpp  memory.cpp  rom.cpp
tests/helpers/: random.cpp  random.h
tests/m68k/: bus_manager.cpp  ea_decoder.cpp  exception_unit.cpp  int_dev.h  prefetch_queue.cpp  test_case.h  test_cpu.hpp  test_program.h  tests_loader.cpp  tests_loader.h  tests_loader.hpp  tests_runner.cpp
tests/m68k/MCL/: mcl.h  runner.cpp
tests/m68k/OPCLOGR3/: opcode_decoder.cpp  opcode_loader.cpp  opcode_loader.h
tests/m68k/THT/: test_case.h  tests_loader.cpp  tests_runner.cpp
tests/m68k/THT_MAP/: map_loader.cpp  map_loader.h  map_test.cpp
tests/m68k/decoding/: opcode_decoder.cpp
tests/m68k/exercisers/: notes
tests/m68k/exercisers/MCL/: License  notes
tests/m68k/exercisers/THT/: notes
tests/m68k/performance/: performance.cpp
tests/memory/: helper.h  memory_builder.cpp  memory_unit.cpp
tests/vdp/: blank_flags.cpp  dma.cpp  hv_counters.cpp  ports.cpp  render.cpp  renderer_builder.hpp  test_vdp.h
tests/z80/: arithmetic_logic_unit.cpp  cpu_registers.cpp  register_set.cpp  tap_loader.hpp  tests_runner.cpp  zex_runner.cpp
tests/z80/exercisers/: notes
tests/z80/exercisers/Spectrum/: Notes
tests/z80/exercisers/z80test/: License  Notes
tools/: setup_cmake_cl_release.bat
